...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aev_whenTextView"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/aev_subscribe_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="160dp"
                android:layout_marginRight="160dp"
                android:text="parteciperò"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/aev_descriptionTextView"
                app:layout_constraintVertical_bias="0.0" />

...
