...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ae_filterTextView"
                app:layout_constraintVertical_bias="0.0"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <ListView
                    android:id="@+id/ae_eventsListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
